compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt48765.diag.txt
/kt48765.kt:8:13: error: type argument for a type parameter T can't be inferred because it has incompatible upper bounds: String, Number (multiple incompatible classes)
        B().foo(x, foo())
            ^

